--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>ВРАЩАЙ ПСИНУ</title>
   </head>
   <body class="page">
+    <header class="header">
+      <h1 class="header__title">TRANSFORM НА ПСАХ</h1>
+    </header>
     <div class="main">
       <div class="cards">
         <div class="card">
