--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main">
       <div class="cards">
         <div class="card">
-          <h2 class="card__title">КРУТИ ПСА</h2>
+          <h2 class="card__title card__title-rotate">КРУТИ ПСА</h2>
           <img
             src="./Images/psina.png"
             alt="Псина с ртом открытым"
@@ -22,7 +22,7 @@
           />
         </div>
         <div class="card">
-          <h2 class="card__title">ДВИГАЙ ПСА</h2>
+          <h2 class="card__title card__title-translate">ДВИГАЙ ПСА</h2>
           <img
             src="./Images/ewepes.png"
             alt="Псина с ртом открытым"
@@ -30,7 +30,7 @@
           />
         </div>
         <div class="card">
-          <h2 class="card__title">УВЕЛИЧИВАЙ ПСА</h2>
+          <h2 class="card__title card__title-scale">УВЕЛИЧИВАЙ ПСА</h2>
           <img
             src="./Images/mops.png"
             alt="Псина с ртом открытым"
@@ -38,7 +38,7 @@
           />
         </div>
         <div class="card">
-          <h2 class="card__title">ПЕРЕКОСИ ПСА</h2>
+          <h2 class="card__title card__title-skew">ПЕРЕКОСИ ПСА</h2>
           <img
             src="./Images/onemorepes.png"
             alt="Псина с ртом открытым"
